[package]
name = "derive-partial-eq-extras"
description = "More customisable #[derive(PartialEq)]"
version = "0.1.1"
edition = "2018"
authors = [ "Ben <kaleidawave@gmail.com>" ]
repository = "https://github.com/kaleidawave/derive-partial-eq-extras"
categories = [ "development-tools" ]
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn-helpers = "0.4.1"
syn = { version = "1.0.81", features = ["full", "extra-traits"] }
