[package]
name = "derive-partial-eq-extras"
description = "More customisable #[derive(PartialEq)]"
version = "0.2.0"
edition = "2021"
authors = ["Ben <kaleidawave@gmail.com>"]
repository = "https://github.com/kaleidawave/derive-partial-eq-extras"
categories = ["development-tools"]
license = "MIT"
keywords = ["partial", "eq", "derive", "extras"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# `syn-extra-traits` is for `syn::Type` equality
syn-helpers = { version = "0.5", features = ["syn-extra-traits"] }
